[package]
name = "leaps-and-bounds"
version = "0.1.0"
authors = ["Chris Patuzzo <chris@patuzzo.co.uk>"]
edition = "2018"

[dependencies]
bincode = "1.0.1"
bit-set = "0.5.0"
bucket_queue = "2.0.0"
flate2 = "1.0.5"
lehmer = "2.0.0"
rayon = "1.0.3"
serde_derive = "1.0.80"
serde = "1.0.80"
serde_bytes = "0.10.4"
